possible fix for select boxes on firefox / non-MacOS

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,6 +177,10 @@ section {
   margin-bottom: 50px;
 }
 
+select {
+  color: black;
+}
+
 .slideout {
   display: none;
 }
